--- a/objects-NASA/css/style.css
+++ b/objects-NASA/css/style.css
@@ -10,12 +10,54 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
+body{
+  background-color: #60666D;
+}
 img{
   display: block;
   margin: 0 auto;
-  height: 300px
+  height: 540px;
+  width: 900px;
 }
 
+/******************************************
+/* THE BUTTON
+/*******************************************/
+.btn {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  min-width: 130px;
+  padding: 15px 50px;
+  margin-top: 10px;
+  border: 2px solid #000;
+  text-transform: uppercase;
+  font-weight: bold;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.btn:hover span {
+  color: #fff;
+}
+
+.btn .hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  color: #fff;
+  z-index: -1;
+  transform: translateY(100%);
+  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn:hover .hover {
+  transform: translateY(0);
+}
 
 /******************************************
 /* ADDITIONAL STYLES
